# timer

./: README.md
include/timer/: timercmd.hpp  version.hpp
include/util/: enum.hpp
project/: CMakeLists.txt
project/include/timer/: timer.hpp  timerclock.hpp  timercmd.hpp  timerdb.hpp  timerlog.hpp
project/include/util/: cmdline.hpp  datetime.hpp  string.hpp
project/src/: main.cpp
project/src/timer/: timer.cpp  timerclock.cpp  timercmd.cpp  timerdb.cpp  timerlog.cpp
project/src/util/: cmdline.cpp  datetime.cpp
scripts/: timer-change-task.sh  timer-pause-continue.sh  timer-status.sh  timer-stop.sh  timer-switch-previous.sh  timer-switch.sh
src/timer/: timercmd.cpp  timerdb.cpp
